[gd_scene load_steps=10 format=3 uid="uid://brre3sv00u266"]

[ext_resource type="Script" path="res://movements/3D/3d_charter.gd" id="1_1un67"]

[sub_resource type="Curve" id="Curve_cciv2"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0), -2.65934, -2.65934, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ldu2x"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fg3rg"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_06s6f"]
height = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r1iqr"]
albedo_color = Color(0, 0.603922, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_00jac"]
material = SubResource("StandardMaterial3D_r1iqr")
radial_segments = 8
rings = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b24bm"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ibmtf"]
material = SubResource("StandardMaterial3D_b24bm")
radius = 0.05
height = 0.2
radial_segments = 4
rings = 1

[node name="3dCharter" type="CharacterBody3D"]
script = ExtResource("1_1un67")
fall_curve = SubResource("Curve_cciv2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ldu2x")

[node name="ShapeCastCealing" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51367, 0)
shape = SubResource("CylinderShape3D_fg3rg")

[node name="ShapeCastFloor" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.150255, 0)
shape = SubResource("CylinderShape3D_06s6f")

[node name="RayCastFloor" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, -0.5, 0)

[node name="display_model" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="display_model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_00jac")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="display_model/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.229286, 0.417468, -0.417602)
mesh = SubResource("SphereMesh_ibmtf")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="display_model/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.229, 0.417, -0.418)
mesh = SubResource("SphereMesh_ibmtf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="camera_base" type="Node3D" parent="Control"]

[node name="Camera3D" type="Camera3D" parent="Control/camera_base"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 2, 0)
